--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,3 +48,6 @@ wiremock = "0.6"
 axum-test = "16"
 testcontainers = "0.23"
 testcontainers-modules = { version = "0.11", features = ["clickhouse"] }
+portpicker = "0.1"
+rand = "0.8"
+libc = "0.2"
