--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,6 +21,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v6
 
+      - name: Install rust toolchain
+        uses: dtolnay/rust-toolchain@1.91
+
+      - name: Cargo check
+        run: cargo check --all-targets
+
+      - name: Cargo test
+        run: cargo test
+
       - name: Extract version from Cargo.toml
         id: cargo
         run: |
