--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,11 @@ tikv-jemallocator = { version = "0.6", features = ["profiling", "stats"] }
 tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }
 jemalloc_pprof = "0.8"
 thiserror = "2"
+serde_yaml = "0.9"
+sha1 = "0.10"
+hmac = "0.12"
+hex = "0.4"
+subtle = "2"
 
 [profile.release]
 opt-level = 3
@@ -51,3 +56,5 @@ testcontainers-modules = { version = "0.11", features = ["clickhouse"] }
 portpicker = "0.1"
 rand = "0.8"
 libc = "0.2"
+chrono = "0.4"
+urlencoding = "2"
