refactor(vercel): remove kafka, fix signature and optional fields
- Remove kafka exporter and rdkafka dependency (~1200 lines deleted)
- Fix Vercel signature verification to expect hex digest without sha1= prefix
- Make message and log_type optional to handle external/proxy logs
- Add info logging for Loki pushes with timing (elapsed_ms)
- Simplify Vercel receiver to require Loki exporter only
- Rename config files to config.example.* pattern

--- a/config.example.logs.yaml
+++ b/config.example.logs.yaml
@@ -1,4 +1,4 @@
-# Logs-only configuration (no ClickHouse/OTLP)
+# Logs-only configuration
 
 server:
   port: 4318
@@ -11,13 +11,12 @@ receivers:
 exporters:
   loki:
     url: "http://loki:3100"
-    # tenant_id: "tenant1"  # For multi-tenant Loki
 
 pipelines:
   logs:
     receiver: vercel
     exporter: loki
     batch:
-      max_size: 5000
-      timeout_ms: 200
-      workers: 2
+      max_size: 5000              # Flush after N log entries
+      timeout_ms: 500             # Flush after N ms  
+      workers: 2                  # Parallel batch workers  
